...

    _contentView = [[UIView alloc] initWithFrame:CGRectZero];
    _contentView.translatesAutoresizingMaskIntoConstraints = NO;
    [self addSubview:_contentView];

    _errorLabel = [[UILabel alloc] initWithFrame:CGRectZero];
    _errorLabel.accessibilityIdentifier = @"error";
    _errorLabel.translatesAutoresizingMaskIntoConstraints = NO;
    _errorLabel.textColor = [UIColor blackColor];
    [self addSubview:_errorLabel];

    [NSLayoutConstraint activateConstraints:@[
        [_titleLabel.leadingAnchor constraintEqualToAnchor:self.leadingAnchor],
...
